--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.white_sdev</groupId>
-    <artifactId>lombok-logging</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>${project.groupId}:${project.artifactId}</name>
-    <description>Simple empty project highlighting the lombok logging capabilities.</description>
+    <artifactId>desktop-restcall</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
+	<name>${project.groupId}:${project.artifactId}</name>
+    <description>Simple empty project highlighting Spring Rest call consuming an endpoint.</description>
 
 
     <properties>
         <java.version>12</java.version>
-        <main.class>org.white_sdev.lomboklogging.LombokLogging</main.class>
+        <main.class>org.white_sdev.desktoprestcall.DesktopRestCall</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -35,6 +35,35 @@
             <type>jar</type>
         </dependency>
         <!-- endregion -->
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-web</artifactId>-->
+<!--            <version>4.3.14.RELEASE</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--            <artifactId>jackson-core</artifactId>-->
+<!--            <version>2.9.2</version>&lt;!&ndash;this is thight to version 4.3.14.RELEASE of srping-web&ndash;&gt;-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>5.3.15</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.projectreactor.netty/reactor-netty -->
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
+            <version>1.0.15</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
@@ -96,5 +125,4 @@
             <!-- endregion -->
         </plugins>
     </build>
-
 </project>
