--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,20 @@
             <version>1.0.15</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+        </dependency>
 
+
+        <dependency>
+            <groupId>uk.co.jemos.podam</groupId>
+            <artifactId>podam</artifactId>
+            <version>7.2.7.RELEASE</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
 
 
     </dependencies>
@@ -112,6 +125,7 @@
                 <version>3.0.0</version>
                 <configuration>
                     <mainClass>${main.class}</mainClass>
+<!--                    <cleanupDaemonThreads>false</cleanupDaemonThreads>-->
                 </configuration>
                 <executions>
                     <execution>
